<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
    tools:context="com.example.myproject.ui.fragments.MapFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/lowBar"
            android:layout_marginTop="-1dp"
            android:layout_marginBottom="1dp"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="0dp"
            tools:ignore="VisualLintBounds">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/positionButton"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/gps_1"
                android:contentDescription="@string/compass_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zoomDown" />

            <com.yandex.mapkit.mapview.MapView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="-58dp">

            </com.yandex.mapkit.mapview.MapView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zoomDown"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/minus_1"
                android:contentDescription="@string/minus_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/zoomUp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zoomUp"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/plus__1__1"
                android:contentDescription="@string/plus_1_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/setting_lines_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/setting_lines_1"
                android:contentDescription="@string/setting_lines_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/lowBar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_1_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="10dp"
                tools:ignore="RtlHardcoded">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/map"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ia"
                    android:contentDescription="@string/mapButtonDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/search"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/search_interface_symbol_1"
                    android:contentDescription="@string/searchButtonDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/review"
                    app:layout_constraintStart_toEndOf="@+id/map"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/review"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/review_1"
                    android:contentDescription="@string/reviewButtonDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/user"
                    app:layout_constraintStart_toEndOf="@+id/search"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/user"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/user_2"
                    android:contentDescription="@string/userProfileButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/review"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>