<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/account" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__account"
				android:background="@drawable/_bg__account_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="411dp"
				android:layout_height="823dp" />

			<View   android:id="@+id/rectangle_6"
				android:background="@drawable/rectangle_6_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="753dp"
				android:layout_width="411dp"
				android:layout_height="70dp" />


			<RelativeLayout android:id="@+id/frame_2"
				android:layout_marginTop="753dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/free_icon_location_pin_8509029_1"
					android:src="@drawable/free_icon_location_pin_8509029_1"
					android:contentDescription="free_icon_location_pin_8509029_1"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="10dp"
					android:layout_width="50dp"
					android:layout_height="50dp" />

				<ImageView android:id="@+id/search_interface_symbol_1"
					android:src="@drawable/search_interface_symbol_1"
					android:contentDescription="search_interface_symbol_1"
					 android:layout_marginStart="126dp"
					android:layout_marginTop="10dp"
					android:layout_width="50dp"
					android:layout_height="50dp" />

				<ImageView android:id="@+id/review_1"
					android:src="@drawable/review_1"
					android:contentDescription="review_1"
					 android:layout_marginStart="232dp"
					android:layout_marginTop="10dp"
					android:layout_width="50dp"
					android:layout_height="50dp" />

				<ImageView android:id="@+id/user_1"
					android:src="@drawable/user_1a"
					android:contentDescription="user_1a"
					 android:layout_marginStart="338dp"
					android:layout_marginTop="10dp"
					android:layout_width="50dp"
					android:layout_height="50dp" />

			</RelativeLayout>

			<View   android:id="@+id/ellipse_5"
				android:background="@drawable/ellipse_5_shape"
				 android:alpha="0"
				 android:layout_marginStart="341dp"
				android:layout_marginTop="691dp"
				android:layout_width="50dp"
				android:layout_height="50dp" />

			<ImageView android:id="@+id/add_1"
				android:src="@drawable/add_1"
				android:contentDescription="add_1"
				 android:layout_marginStart="338dp"
				android:layout_marginTop="691dp"
				android:layout_width="50dp"
				android:layout_height="50dp" />

			<ImageView android:id="@+id/ellipse_5_ek1"
				android:src="@drawable/ellipse_5_ek1"
				android:contentDescription="ellipse_5_ek1"
				 android:layout_marginStart="106dp"
				android:layout_marginTop="40dp"
				android:layout_width="200dp"
				android:layout_height="200dp" />

			<ImageView android:id="@+id/user_3"
				android:src="@drawable/user_3"
				android:contentDescription="user_3"
				 android:layout_marginStart="106dp"
				android:layout_marginTop="40dp"
				android:layout_width="200dp"
				android:layout_height="200dp" />

			<View   android:id="@+id/rectangle_5"
				android:background="@drawable/rectangle_5_shape"
				 android:alpha="0.63999998569489"
				 android:layout_marginStart="327dp"
				android:layout_marginTop="20dp"
				android:layout_width="54dp"
				android:layout_height="40dp" />

			<ImageView android:id="@+id/hamburger_2"
				android:src="@drawable/hamburger_2"
				android:contentDescription="hamburger_2"
				 android:layout_marginStart="335dp"
				android:layout_marginTop="23dp"
				android:layout_width="38dp"
				android:layout_height="34dp" />

			<View   android:id="@+id/rectangle_5_ek1"
				android:background="@drawable/rectangle_5_ek1_shape"
				 android:layout_marginStart="58dp"
				android:layout_marginTop="274dp"
				android:layout_width="296dp"
				android:layout_height="45dp" />

			<TextView android:id="@+id/fullname"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/fullname_color"
				android:layout_marginLeft="55dp"
				android:layout_marginTop="273dp"
				android:layout_width="311dp"
				android:layout_height="60dp"
				android:text="@string/fullname_string"
				 />

			<TextView android:id="@+id/__userid"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/__userid_color"
				android:layout_marginLeft="47dp"
				android:layout_marginTop="229dp"
				android:layout_width="108dp"
				android:layout_height="36dp"
				android:text="@string/__userid_string"
				 />

			<TextView android:id="@+id/achievements"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/__userid_color"
				android:layout_marginLeft="55dp"
				android:layout_marginTop="337dp"
				android:layout_width="311dp"
				android:layout_height="50dp"
				android:text="@string/achievements_string"
				 />

			<TextView android:id="@+id/quantity"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="20sp"
				android:textColor="@color/__userid_color"
				android:layout_marginLeft="275dp"
				android:layout_marginTop="229dp"
				android:layout_width="110dp"
				android:layout_height="36dp"
				android:text="@string/quantity_string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>